<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movie"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/rounded_white">

    <ImageView
        android:id="@+id/item_movie_imageIV"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_movie_icon_app" />

    <TextView
        android:id="@+id/item_movie_nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/movie_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/item_movie_release_dateTV"
        app:layout_constraintStart_toEndOf="@+id/item_movie_imageIV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_movie_release_dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/release_date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/item_movie_rateTV"
        app:layout_constraintStart_toEndOf="@+id/item_movie_imageIV"
        app:layout_constraintTop_toBottomOf="@+id/item_movie_nameTV" />

    <TextView
        android:id="@+id/item_movie_rateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_movie_imageIV"
        app:layout_constraintTop_toBottomOf="@+id/item_movie_release_dateTV" />
</androidx.constraintlayout.widget.ConstraintLayout>