<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieActivity">

    <ImageView
        android:id="@+id/movie_main_imageIV"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/movie_titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_main_imageIV" />

    <TextView
        android:id="@+id/movie_release_dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_titleTV" />

    <TextView
        android:id="@+id/movie_rateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_release_dateTV" />

    <TextView
        android:id="@+id/movie_overviewTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toStartOf="@+id/movie_poster_imageIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_rateTV" />

    <ImageView
        android:id="@+id/movie_poster_imageIV"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_titleTV"
        app:srcCompat="@drawable/ic_movie_icon_app" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/movie_youTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_overviewTV" />

    <ImageView
        android:id="@+id/movie_play_buttonIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_play_circle"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/movie_youTubePlayerView"
        app:layout_constraintEnd_toEndOf="@+id/movie_youTubePlayerView"
        app:layout_constraintStart_toStartOf="@+id/movie_youTubePlayerView"
        app:layout_constraintTop_toTopOf="@+id/movie_youTubePlayerView" />

    <!-- <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_videosRV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movie_overviewTV" />-->



</androidx.constraintlayout.widget.ConstraintLayout>